Fix Typos in Apache License